--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,7 +43,7 @@
 <body>
     <div class="card">
         <h1>🚀 Jenkins + Docker + GitHub Pipeline</h1>
-        <p>Selamat datang di demo DevOps!</p>
+        <p>Selamat datang di demo DevOps By Muktos!</p>
         <button onclick="alert('Build berhasil via Jenkins!')">Test Button</button>
     </div>
 </body>
