--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 <body>
     <div class="card">
         <h1>🚀 Jenkins + Docker + GitHub Pipeline</h1>
-        <p>Selamat datang di demo DevOps By Muktos!</p>
+        <p>Selamat datang di demo DevOps By Muktos Testing auto deployment!</p>
         <button onclick="alert('Build berhasil via Jenkins!')">Test Button</button>
     </div>
 </body>
